fix logo on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -253,4 +253,8 @@ img {
   .team img {
     width: 70%;
   }
+
+  .navbar {
+    height: 155px;
+  }
 }
